# portfolio-analytics-platform

./: .dockerignore  .gitignore  CHANGELOG.md  Makefile  README.md  api.Dockerfile  base.Dockerfile  dashboard.Dockerfile  data.Dockerfile  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
data/market_data/: fx.snappy.parquet
data/portfolios/uploads/samples/: sample_portfolio.csv  sample_portfolio.xlsx  sample_portfolio_extended.csv  sample_portfolio_invalid_dates.csv
docs/: DEPLOYMENT.md  HINTS.md  TASK.md
portfolio_analytics/api/: api_exceptions.py  api_main.py  common.py  requirements.txt
portfolio_analytics/api/actions/: create_equity_data.py  create_fx_data.py  create_portfolio.py  delete_portfolios.py  download_portfolios.py  health.py  list_portfolios.py
portfolio_analytics/api/market_data/: base.py  equity.py  fx.py
portfolio_analytics/common/: filesystem.py
portfolio_analytics/common/data/market_data/: fx.snappy.parquet
portfolio_analytics/common/data/portfolios/uploads/samples/: sample_portfolio.parquet  sample_portfolio_invalid_tickers.csv
portfolio_analytics/common/utils/: filesystem.py  instruments.py  logging_config.py
portfolio_analytics/dashboard/: dashboard_main.py  requirements.txt
portfolio_analytics/dashboard/app/: components.py  layout.py
portfolio_analytics/dashboard/assets/: style.css
portfolio_analytics/dashboard/core/: data_loader.py  pnl.py  stats.py
portfolio_analytics/dashboard/utils/: cache_utils.py  dashboard_exceptions.py
scripts/: generate_mock_portfolio.py  run_analysis.py
tests/: common.py  conftest.py
tests/integration/: test_api.Dockerfile  test_api.py  test_api_workflows.py  test_dashboard.Dockerfile  test_dashboard.py  test_dashboard_health.py
tests/test_api/: test_api_main.py  test_common.py
tests/test_api/test_actions/: test_create_equity_data.py  test_create_fx_data.py  test_create_portfolio.py  test_delete_portfolios.py  test_download_portfolios.py  test_health.py  test_list_portfolios.py
tests/test_api/test_market_data/: test_base.py  test_equity.py  test_fx.py
tests/test_common/test_utils/: test_filesystem.py  test_instruments.py
tests/test_dashboard/: test_dashboard_main.py
tests/test_dashboard/core/: test_pnl.py
tests/test_dashboard/test_app/: test_components.py
tests/test_dashboard/test_core/: test_data_loader.py  test_pnl.py  test_stats.py
tests/test_dashboard/test_utils/: test_cache_utils.py  test_dashboard_exceptions.py
tests/test_dashboard/utils/: test_cache_utils.py
