[tool.poetry]
name = "portfolio_analytics"
version = "0.1.0"
description = "A Python project to analyse a portfolio given positions and market data."
authors = ["Guillaume Bournique <guillaume.bournique@gmail.com>"]
readme = "README.md"
package-mode = true
packages = [{ include = "portfolio_analytics" }]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^2.1.3"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
pyarrow = "^18.1.0"


[tool.poetry.group.api.dependencies]
fastapi = "^0.115.6"
python-multipart = "^0.0.19"
tomli = "^2.2.1"
yfinance = "^0.2.50"
uvicorn = "^0.34.0"


[tool.poetry.group.dashboard.dependencies]
dash = "^2.18.2"
dash-bootstrap-components = "^1.6.0"
plotly = "^5.24.1"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
coverage = "^7.6.3"
flake8 = "^7.1.1"
isort = "^5.13.2"
jupyter = "^1.1.1"
matplotlib = "^3.9.3"
mypy = "^1.12.0"
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.8.3"
pandas-stubs = "^2.2.3.241126"
types-requests = "^2.32.0.20241016"
python-semantic-release = "^9.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 89

[tool.pylint]
disable = [
    "logging-fstring-interpolation",
]

[tool.mypy]
plugins = [
    "numpy.typing.mypy_plugin"
]
[[tool.mypy.overrides]]
module = [
    "dash.*",
    "dash_bootstrap_components.*",
    "plotly.*",
    "yfinance.*"
]
ignore_missing_imports = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if TYPE_CHECKING:"
]
fail_under = 0

[tool.semantic_release]
branch = "master"
version_toml = "pyproject.toml:tool.poetry.version"
tag_commit = true
commit_subject = "{version}"
commit_message = "Automatically generated by python-semantic-release [skip ci]"
upload_to_repository = false
upload_to_release = false
build_command = false
